--- a/css/styles.css
+++ b/css/styles.css
@@ -359,11 +359,14 @@ template {
 ::selection {
   background: #747d8c; }
 
+html,
+body {
+  color: #fff; }
+
 html {
   scroll-behavior: smooth; }
 
 body {
-  color: #fff;
   font-size: 18px;
   line-height: 1.6;
   background-color: #464b54;
@@ -388,6 +391,10 @@ p {
   margin-bottom: 1rem; }
   p:last-of-type {
     margin-bottom: 0; }
+
+a {
+  color: #fff;
+  text-decoration: none; }
 
 .heading {
   text-align: center; }
@@ -448,6 +455,26 @@ nav ul {
         transition: all .35s ease; }
       nav ul li a:hover:before {
         transform: scale(1); }
+
+button {
+  color: #fff;
+  padding: 1rem;
+  overflow: hidden;
+  position: relative;
+  border: 1px solid white;
+  background-color: #5d6470; }
+  button:before {
+    content: 'Email Me';
+    top: 0;
+    left: -1px;
+    width: 100%;
+    height: 100%;
+    padding: 1rem;
+    position: absolute;
+    transition: all .45s ease;
+    background-color: #464b54; }
+  button:hover:before {
+    transform: translate(100%, 0); }
 
 .card {
   padding: 1rem;
