--- a/css/styles.css
+++ b/css/styles.css
@@ -153,14 +153,15 @@ button:-moz-focusring,
   outline: 1px dotted ButtonText; }
 
 ::-moz-selection {
+  color: #fff;
   background: rgba(116, 125, 140, 0.9); }
 
 ::selection {
+  color: #fff;
   background: rgba(116, 125, 140, 0.9); }
 
 html,
 body {
-  color: #fff;
   overflow-x: hidden; }
 
 html {
@@ -169,25 +170,43 @@ html {
 body {
   font-size: 18px;
   line-height: 1.6;
-  background-color: #464b54;
+  color: #464b54;
   font-family: 'Muli', sans-serif; }
 
+.hide {
+  opacity: 0;
+  transition: opacity .35s ease; }
+
 h1, h2, h3, h4, h5, h6 {
+  line-height: 1.2;
   font-weight: bold; }
 
 h1 {
   margin: 0;
-  font-size: 4rem;
+  font-size: 2rem;
   line-height: 1.2; }
+  @media screen and (min-width: 480px) {
+    h1 {
+      font-size: 3rem; } }
+  @media screen and (min-width: 768px) {
+    h1 {
+      font-size: 4rem; } }
 
 h2 {
-  font-size: 2rem;
-  text-align: center;
-  margin-bottom: 4rem; }
+  font-size: 1.6rem; }
+  @media screen and (min-width: 480px) {
+    h2 {
+      font-size: 1.8rem; } }
+  @media screen and (min-width: 768px) {
+    h2 {
+      font-size: 2rem; } }
 
 h3 {
-  font-size: 1.6rem;
+  font-size: 1.2rem;
   margin-bottom: 1rem; }
+  @media screen and (min-width: 480px) {
+    h3 {
+      font-size: 1.6rem; } }
 
 p {
   margin-bottom: 1rem; }
@@ -195,14 +214,12 @@ p {
     margin-bottom: 0; }
 
 a {
-  color: #fff;
+  color: #464b54;
   text-decoration: none; }
 
-.heading {
-  text-align: center; }
-
 .flex {
-  display: flex; }
+  display: flex;
+  position: relative; }
 
 .grid {
   display: grid; }
@@ -228,38 +245,151 @@ header {
   margin: 0 auto;
   padding: 0 2rem 2rem; }
   .container section {
-    margin: 4rem 0; }
+    margin: 2rem 0;
+    min-height: 80vh; }
     .container section:first-of-type {
       margin-top: 2rem; }
+    .container section:last-of-type {
+      min-height: auto; }
     .container section#get-in-touch {
       text-align: center; }
-
-nav ul {
-  display: flex;
-  margin: 0;
-  list-style-type: none; }
-  nav ul li {
-    padding: 0;
-    margin: 0;
-    flex: 1 1 auto; }
-    nav ul li a {
-      padding: 1rem;
-      text-decoration: none;
-      color: #fff;
+    .container section.heading {
       position: relative; }
-      nav ul li a:before {
-        content: '';
-        height: 1px;
-        bottom: .5rem;
+      .container section.heading .title {
+        left: 0;
+        top: 30%;
         position: absolute;
-        transform: scale(0);
+        transform: translate(0, -30%); }
+    .container section .column {
+      top: 0;
+      left: 0;
+      position: absolute; }
+      .container section .column h3,
+      .container section .column span {
+        opacity: 0;
+        left: -120%;
+        position: relative;
+        transition: all .35s; }
+      .container section .column h3 {
+        transition-delay: .1s; }
+      .container section .column span:nth-of-type(1) {
+        transition-delay: 0.2s; }
+      .container section .column span:nth-of-type(2) {
+        transition-delay: 0.3s; }
+      .container section .column span:nth-of-type(3) {
+        transition-delay: 0.4s; }
+      .container section .column button {
+        position: absolute;
+        bottom: -10%;
+        left: 0;
+        border: 1px solid #464b54;
         background-color: #fff;
-        width: calc(100% - 2rem);
-        transition: all .35s ease; }
-      nav ul li a:hover:before {
-        transform: scale(1); }
+        padding: .5rem 1.5rem;
+        opacity: 0;
+        transition: all .35s ease .4s, color .35s ease 0s, background-color .35s ease 0s; }
+        .container section .column button:hover {
+          color: #fff;
+          background-color: #464b54; }
+      .container section .column:first-child {
+        top: 5%;
+        width: 40%;
+        z-index: 2;
+        padding: 2rem;
+        background-color: #fff; }
+        .container section .column:first-child .box-top-bottom:before, .container section .column:first-child .box-top-bottom:after,
+        .container section .column:first-child .box-left-right:before,
+        .container section .column:first-child .box-left-right:after {
+          content: '';
+          position: absolute;
+          background-color: #464b54;
+          transition: all .35s ease .25s; }
+        .container section .column:first-child .box-top-bottom:before,
+        .container section .column:first-child .box-left-right:before {
+          left: 0;
+          top: 0; }
+        .container section .column:first-child .box-top-bottom:after,
+        .container section .column:first-child .box-left-right:after {
+          right: 0;
+          bottom: 0; }
+        .container section .column:first-child .box-top-bottom:before, .container section .column:first-child .box-top-bottom:after {
+          height: 1px;
+          width: 0; }
+        .container section .column:first-child .box-left-right:before, .container section .column:first-child .box-left-right:after {
+          width: 1px;
+          height: 0; }
+        .container section .column:first-child.show .box-top-bottom:before, .container section .column:first-child.show .box-top-bottom:after,
+        .container section .column:first-child.show .box-left-right:before,
+        .container section .column:first-child.show .box-left-right:after {
+          transition-delay: .8s; }
+        .container section .column:first-child.show .box-top-bottom:before, .container section .column:first-child.show .box-top-bottom:after {
+          width: 100%; }
+        .container section .column:first-child.show .box-left-right:before, .container section .column:first-child.show .box-left-right:after {
+          height: 100%; }
+        .container section .column:first-child.show h3,
+        .container section .column:first-child.show span {
+          left: 0;
+          opacity: 1; }
+        .container section .column:first-child.show button {
+          left: 85%;
+          opacity: 1; }
+      .container section .column:last-child {
+        top: 10%;
+        left: 35%;
+        width: 60%;
+        height: 60%; }
+        .container section .column:last-child:before {
+          content: '';
+          top: -20%;
+          z-index: 1;
+          left: 0;
+          width: 100%;
+          height: 120%;
+          position: absolute;
+          transition: all .35s ease-in;
+          background-color: #fff; }
+        .container section .column:last-child img {
+          max-width: 100%;
+          position: relative;
+          height: auto; }
+        .container section .column:last-child.show:before {
+          left: 100%; }
 
-button {
+nav {
+  padding-top: .5rem; }
+  nav ul {
+    display: flex;
+    margin: 0;
+    list-style-type: none; }
+    nav ul li {
+      padding: 0;
+      margin: 0;
+      flex: 1 1 auto; }
+      nav ul li a {
+        padding: .5rem;
+        font-size: .9rem;
+        position: relative;
+        text-decoration: none; }
+        @media screen and (min-width: 480px) {
+          nav ul li a {
+            padding: 1rem;
+            font-size: 1rem; } }
+        nav ul li a:before {
+          content: '';
+          height: 1px;
+          bottom: .2rem;
+          position: absolute;
+          transform: scale(0);
+          background-color: #464b54;
+          width: calc(100% - 1rem);
+          transition: all .35s ease; }
+          @media screen and (min-width: 480px) {
+            nav ul li a:before {
+              bottom: .5rem;
+              width: calc(100% - 2rem); } }
+        nav ul li a:hover:before {
+          transform: scale(1); }
+
+button.email {
   color: #fff;
   padding: 1rem;
   display: block;
@@ -268,7 +398,9 @@ button {
   position: relative;
   border: 1px solid white;
   background-color: #5d6470; }
-  button:before {
+  button.email a {
+    color: #fff; }
+  button.email:before {
     content: 'Email Me!';
     top: 0;
     left: -1px;
@@ -278,15 +410,59 @@ button {
     position: absolute;
     transition: all .45s ease;
     background-color: #464b54; }
-  button:hover:before {
+  button.email:hover:before {
     transform: translate(100%, 0); }
 
+.scroll {
+  left: 50%;
+  width: 30px;
+  height: 60px;
+  bottom: 0;
+  position: absolute;
+  margin-top: -35px;
+  margin-left: -20px;
+  border-radius: 25px;
+  box-shadow: inset 0 0 0 1px #464b54; }
+  .scroll:before {
+    content: '';
+    top: 8px;
+    left: 50%;
+    width: 8px;
+    height: 8px;
+    margin-left: -4px;
+    border-radius: 4px;
+    position: absolute;
+    background: #464b54;
+    -webkit-animation-duration: 1.5s;
+    animation-duration: 1.5s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-name: scroll;
+    animation-name: scroll; }
+
+@-webkit-keyframes scroll {
+  0% {
+    opacity: 1; }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateY(46px);
+    transform: translateY(46px); } }
+
+@keyframes scroll {
+  0% {
+    opacity: 1; }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateY(46px);
+    transform: translateY(46px); } }
+
 .card {
+  color: #fff;
   padding: 1rem;
+  overflow: hidden;
   min-height: 300px;
-  border: 1px solid white;
   position: relative;
-  overflow: hidden; }
+  border: 1px solid white; }
   .card * {
     z-index: 3;
     transition: all .35s ease; }
@@ -311,12 +487,6 @@ button {
     background: #464b54 url("../img/night.jpg") center/cover no-repeat; }
   .card:nth-child(odd):before {
     background: #464b54 url("../img/dusk.jpg") center/cover no-repeat; }
-  .card:nth-child(1):before {
-    background: #464b54 url("../img/herminius.jpg") center/cover no-repeat; }
-  .card:nth-child(2):before {
-    background: #464b54 url("../img/n8research.jpg") center/cover no-repeat; }
-  .card:nth-child(3):before {
-    background: #464b54 url("../img/jodrell-bank.jpg") center/cover no-repeat; }
   .card a {
     top: 0;
     left: 0;
@@ -540,15 +710,17 @@ button {
 
 .horizonal-lines p {
   top: 80px;
-  left: -100%;
   text-align: center;
   margin-bottom: 0.2rem; }
-  .horizonal-lines p:nth-of-type(1) {
-    transition-delay: 0.1s; }
-  .horizonal-lines p:nth-of-type(2) {
-    transition-delay: 0.2s; }
-  .horizonal-lines p:nth-of-type(3) {
-    transition-delay: 0.3s; }
+  .horizonal-lines p span {
+    left: -110%;
+    position: relative; }
+    .horizonal-lines p span:nth-of-type(1) {
+      transition-delay: 0.1s; }
+    .horizonal-lines p span:nth-of-type(2) {
+      transition-delay: 0.2s; }
+    .horizonal-lines p span:nth-of-type(3) {
+      transition-delay: 0.3s; }
 
 .horizonal-lines .lines-1:before, .horizonal-lines .lines-1:after,
 .horizonal-lines .lines-2:before,
@@ -612,13 +784,13 @@ button {
   left: 50%;
   transform: translateX(-50%); }
 
-.horizonal-lines:hover p {
+.horizonal-lines:hover p span {
   left: 0; }
-  .horizonal-lines:hover p:nth-of-type(1) {
+  .horizonal-lines:hover p span:nth-of-type(1) {
     transition-delay: 0.6s; }
-  .horizonal-lines:hover p:nth-of-type(2) {
+  .horizonal-lines:hover p span:nth-of-type(2) {
     transition-delay: 0.7s; }
-  .horizonal-lines:hover p:nth-of-type(3) {
+  .horizonal-lines:hover p span:nth-of-type(3) {
     transition-delay: 0.8s; }
 
 .horizonal-lines:hover .lines-1:before, .horizonal-lines:hover .lines-1:after,
@@ -646,23 +818,3 @@ button {
 
 .horizonal-lines:hover .lines-5:before {
   transition-delay: 0.5s; }
-
-[data-aos][data-aos][data-aos-duration="400"], body[data-aos-duration="400"] [data-aos] {
-  transition-duration: .4s; }
-
-[data-aos][data-aos][data-aos-easing=ease], body[data-aos-easing=ease] [data-aos] {
-  transition-timing-function: ease; }
-
-[data-aos^=fade][data-aos^=fade] {
-  opacity: 0;
-  transition-property: opacity,transform; }
-
-[data-aos^=fade][data-aos^=fade].aos-animate {
-  opacity: 1;
-  transform: translateZ(0); }
-
-[data-aos=fade-right] {
-  transform: translate3d(-100px, 0, 0); }
-
-[data-aos=fade-left] {
-  transform: translate3d(100px, 0, 0); }
